--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,13 +4,11 @@
 	"name": "AgentasaService",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/dotnet:1-9.0-noble",
-	
-	
+		
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/github-cli:1": {},
-		"ghcr.io/devcontainers/features/node:1" : {},
-		
+		"ghcr.io/devcontainers/features/node:1" : {}		
 	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
@@ -31,12 +29,11 @@
 				"ms-dotnettools.csharp",
 				"ms-dotnettools.csharp-devkit",
 				"ms-dotnettools.csharp-extensions",
-				"github.copilot",
-				"github.copilot-chat",
 				"ms-dotnettools.vscode-dotnet-runtime",
-				"github.vscode-pull-request-github",
-				"ms-dotnettools.vscodeintellicode-csharp"
-
+				"ms-dotnettools.vscodeintellicode-csharp",
+				"github.copilot",
+				"github.copilot-chat",				
+				"github.vscode-pull-request-github"
 			]
 		}
 	},
