--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -7,8 +7,13 @@ on:
       - main
       - development
 
+permissions:
+  contents: read
+  
 jobs:
   prebuild:
+    permissions:
+      packages: write
     runs-on: ubuntu-22.04
     steps:
         
@@ -25,6 +30,6 @@ jobs:
       - name: Pre-build dev container image
         uses: devcontainers/ci@v0.3
         with:
-          imageName: ghcr.io/nam20485/agentaasaservice/devcontainer
-          cacheFrom: ghcr.io/nam20485/agentaasaservice/devcontainer
+          imageName: ghcr.io/nam20485/agentaasaservice/devcontainer:latest
+          cacheFrom: ghcr.io/nam20485/agentaasaservice/devcontainer:latest
           push: always
