re-add read permissions to prebuild.yml

--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -9,11 +9,13 @@ on:
 
 permissions:
   contents: read
-  
+
 jobs:
   prebuild:
     permissions:
+      contents: read
       packages: write
+      
     runs-on: ubuntu-22.04
     steps:
         
