--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Pre-build dev container image
         uses: devcontainers/ci@v0.3
         with:
+          subFolder: .github
           imageName: ghcr.io/nam20485/agentasaservice
           cacheFrom: ghcr.io/nam20485/agentasaservice
           push: always
