--- a/OrchestratorWebApp/OrchestratorWebApp.csproj
+++ b/OrchestratorWebApp/OrchestratorWebApp.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>76bca866-35d5-4d13-b7ab-323080705067</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
