try adding 'containerUser'

--- a/.github/.devcontainer/devcontainer.json
+++ b/.github/.devcontainer/devcontainer.json
@@ -16,12 +16,12 @@
 	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [5000, 5001],
-	"portsAttributes": {
-			"5001": {
-				"protocol": "https"
-			}
-	},
+	// "forwardPorts": [5000, 5001],
+	// "portsAttributes": {
+	// 		"5001": {
+	// 			"protocol": "https"
+	// 		}
+	// },
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "dotnet restore",
@@ -60,7 +60,9 @@
 	},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	"remoteUser": "vscode"
+	"remoteUser": "vscode",
+	"containerUser": "vscode"
+	
 	//"updateRemoteUserUID": 
 }
 
