--- a/.github/.devcontainer/devcontainer.json
+++ b/.github/.devcontainer/devcontainer.json
@@ -9,10 +9,10 @@
 	"features": {
 		"ghcr.io/devcontainers/features/github-cli:1": {},
 		"ghcr.io/devcontainers/features/node:1" : {},
-		//"ghcr.io/devcontainers/features/docker-in-docker:2": {},
-		"ghcr.io/devcontainers/features/sshd:1": {},
-		"ghcr.io/dhoeric/features/google-cloud-cli:1": {},
-		"ghcr.io/devcontainers-extra/features/firebase-cli:2": {}
+		// //"ghcr.io/devcontainers/features/docker-in-docker:2": {},
+		// "ghcr.io/devcontainers/features/sshd:1": {},
+		// "ghcr.io/dhoeric/features/google-cloud-cli:1": {},
+		// "ghcr.io/devcontainers-extra/features/firebase-cli:2": {}
 	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
