revert added extensions

--- a/.github/.devcontainer/devcontainer.json
+++ b/.github/.devcontainer/devcontainer.json
@@ -36,25 +36,25 @@
 			  "ms-dotnettools.vscodeintellicode-csharp",
 			  "github.copilot",
 			  "github.copilot-chat",               
-			  "github.vscode-pull-request-github",              
-			  "42crunch.vscode-openapi",
-			  "ahmadalli.vscode-nginx-conf",
-			  "christian-kohler.npm-intellisense",
-			  "dbaeumer.vscode-eslint",
-			  "docsmsft.docs-article-templates",
-			  "docsmsft.docs-authoring-pack",
-			  "docsmsft.docs-build",
-			  "docsmsft.docs-images",
-			  "docsmsft.docs-markdown",
-			  "docsmsft.docs-preview",
-			  "docsmsft.docs-scaffolding",
-			  "docsmsft.docs-yaml",
-			  "github.vscode-github-actions",
-			  "googlecloudtools.cloudcode",
-			  "hbenl.vscode-test-explorer",
-			  "ms-dotnettools.dotnet-maui",
-			  "ms-vscode.powershell",
-			  "unoplatform.vscode"
+			//   "github.vscode-pull-request-github",              
+			//   "42crunch.vscode-openapi",
+			//   "ahmadalli.vscode-nginx-conf",
+			//   "christian-kohler.npm-intellisense",
+			//   "dbaeumer.vscode-eslint",
+			//   "docsmsft.docs-article-templates",
+			//   "docsmsft.docs-authoring-pack",
+			//   "docsmsft.docs-build",
+			//   "docsmsft.docs-images",
+			//   "docsmsft.docs-markdown",
+			//   "docsmsft.docs-preview",
+			//   "docsmsft.docs-scaffolding",
+			//   "docsmsft.docs-yaml",
+			//   "github.vscode-github-actions",
+			//   "googlecloudtools.cloudcode",
+			//   "hbenl.vscode-test-explorer",
+			//   "ms-dotnettools.dotnet-maui",
+			//   "ms-vscode.powershell",
+			//   "unoplatform.vscode"
 		   ]
 		}
 	},
