--- a/.github/.devcontainer/devcontainer.json
+++ b/.github/.devcontainer/devcontainer.json
@@ -35,11 +35,11 @@
 			  "ms-dotnettools.csharp-extensions",
 			  "ms-dotnettools.vscodeintellicode-csharp",
 			  "github.copilot",
-			  "github.copilot-chat",               
+			  //"github.copilot-chat",               
 			//   "github.vscode-pull-request-github",              
-			//   "42crunch.vscode-openapi",
-			//   "ahmadalli.vscode-nginx-conf",
-			//   "christian-kohler.npm-intellisense",
+			   "42crunch.vscode-openapi",
+			   "ahmadalli.vscode-nginx-conf",
+			   "christian-kohler.npm-intellisense",
 			//   "dbaeumer.vscode-eslint",
 			//   "docsmsft.docs-article-templates",
 			//   "docsmsft.docs-authoring-pack",
@@ -49,11 +49,11 @@
 			//   "docsmsft.docs-preview",
 			//   "docsmsft.docs-scaffolding",
 			//   "docsmsft.docs-yaml",
-			//   "github.vscode-github-actions",
-			//   "googlecloudtools.cloudcode",
-			//   "hbenl.vscode-test-explorer",
-			//   "ms-dotnettools.dotnet-maui",
-			//   "ms-vscode.powershell",
+			   "github.vscode-github-actions",
+			   "googlecloudtools.cloudcode",
+			   "hbenl.vscode-test-explorer",
+			   "ms-dotnettools.dotnet-maui",
+			   "ms-vscode.powershell",
 			//   "unoplatform.vscode"
 		   ]
 		}
