--- a/AgentService/AgentService.csproj
+++ b/AgentService/AgentService.csproj
@@ -9,8 +9,9 @@
 
   <ItemGroup>
     <PackageReference Include="FirebaseAdmin" Version="3.2.0" />
+    <PackageReference Include="Google.Cloud.Firestore" Version="3.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.2" />
     <PackageReference Include="Google.Cloud.AIPlatform.V1" Version="3.31.0" />
     <PackageReference Include="Google.Cloud.SecretManager.V1" Version="2.5.0" />
     <PackageReference Include="Octokit" Version="14.0.0" />
