--- a/.github/workflows/firebase-hosting-deploy-preview-pull-request.yml
+++ b/.github/workflows/firebase-hosting-deploy-preview-pull-request.yml
@@ -17,7 +17,10 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x' # Upgrade Node.js to a compatible version for firebase CLI
+          node-version: '20.x' # Upgrade Node.js to a compatible version for firebase CLI    
+        
+      - name: Install Firebase CLI
+        run: npm install Firebase-tools@14.10.1
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
