--- a/.github/workflows/firebase-hosting-deploy-preview-pull-request.yml
+++ b/.github/workflows/firebase-hosting-deploy-preview-pull-request.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: '20.x' # Upgrade Node.js to a compatible version for firebase CLI    
         
       - name: Install Firebase CLI
-        run: npm install Firebase-tools@14.10.1
+        run: npm install firebase-tools@14.4.0
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
