fix substitution variable name

--- a/.github/workflows/firebase-hosting-deploy-preview-pull-request.yml
+++ b/.github/workflows/firebase-hosting-deploy-preview-pull-request.yml
@@ -37,8 +37,7 @@ jobs:
         uses: 'google-github-actions/setup-gcloud@v2'
 
       - name: Submit Cloud Build for Services (Preview)
-        run: |
-          gcloud builds submit --project=${{ steps.auth.outputs.project_id }} --config=cloudbuild.yaml --substitutions=_COMMIT_SHA=${{ github.sha }}
+        run: gcloud builds submit --project=${{ steps.auth.outputs.project_id }} --config=cloudbuild.yaml --substitutions=_TAG_NAME=${{ github.sha }}
         working-directory: . # Assuming cloudbuild.yaml is at the root
 
       #
