--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -123,6 +123,6 @@ images:
   - '${_REGION}-docker.pkg.dev/${_GCP_PROJECT_ID}/${_ARTIFACT_REGISTRY_REPO}/agentservice:latest'
 
 options:
-  logging: CLOUD_LOGGING_ONLY # Send logs to Cloud Logging
+  logging: LEGACY # Send logs to Cloud Logging
   # machineType: 'E2_HIGHCPU_8' # Optional: Uncomment to specify a faster machine type for Cloud Build
 
